# SLR-parser

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: globals.hpp  parser.hpp
src/: globals.cpp  lexer.l  main.cpp  parser.cpp  tokens.hpp
test/: test_lexer.cpp  test_parser.cpp
